# gomoku

./: .gitignore  CMakeLists.txt  Makefile  gomoku  gomoku.c  gomoku.c:Zone.Identifier  gomoku_ai.c  gomoku_ai.cpp  main.c
src/: .libgomoku.cpp  gomoku.hpp  gomoku_ai.cpp
